<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainWindow"
    android:onClick="screenTapper"
    android:nestedScrollingEnabled="false"
    android:screenOrientation="sensorPortrait">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:onClick="refreshWifiTapper">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="refreshWifiTapper">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_column="0"
                android:src="@mipmap/refresh_bg_24"
                android:paddingTop="5dp"
                android:paddingRight="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/wifi_label_info"
                android:id="@+id/wifiInfo_tv"
                android:layout_row="0"
                android:layout_column="1"
                android:paddingBottom="15dp"
                android:onClick="refreshWifiTapper" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/wifi_label_addr"
                android:id="@+id/wifiAddr_tv"
                android:layout_row="1"
                android:layout_column="1"
                android:paddingTop="0dp"
                android:paddingBottom="2.5dp"
                android:paddingLeft="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/none"
                android:id="@+id/addr_tv"
                android:layout_row="1"
                android:layout_column="3"
                android:paddingLeft="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/wifi_label_netaddr"
                android:id="@+id/wifiServ_tv"
                android:layout_row="2"
                android:layout_column="1"
                android:paddingTop="2.5dp"
                android:paddingBottom="2.5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/none"
                android:id="@+id/net_tv"
                android:layout_row="2"
                android:layout_column="3"
                android:paddingLeft="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/wifi_label_netmask"
                android:id="@+id/wifiMask_tv"
                android:layout_row="3"
                android:layout_column="1"
                android:paddingTop="2.5dp"
                android:paddingBottom="2.5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/none"
                android:id="@+id/mask_tv"
                android:layout_row="3"
                android:layout_column="3"
                android:paddingLeft="15dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/button_open"
        android:id="@+id/open_btn"
        android:layout_row="7"
        android:layout_column="0"
        android:textSize="20dp" />

</LinearLayout>