<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainWindow"
    android:nestedScrollingEnabled="false"
    android:screenOrientation="sensorPortrait">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="577dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/ppt_background"
        android:weightSum="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info_image"
                android:layout_gravity="center"
                android:background="@mipmap/info_cloud"
                android:alpha="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ppt_viewer_info"
                android:id="@+id/ppt_info_tv"
                android:paddingLeft="10dp"
                android:gravity="center_vertical|fill_vertical"
                android:textColor="#387fa8" />
        </TableRow>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/effect_sw"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="true"
                android:height="60dp"
                android:width="60dp"
                android:layout_alignParentLeft="true"
                android:checked="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/effect_mode_off"
                android:id="@+id/effect_tv"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/effect_sw"
                android:layout_toEndOf="@+id/effect_sw"
                android:gravity="center_vertical"
                android:height="60dp"
                android:paddingLeft="10dp"
                android:textColor="#FF387FA8" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="#2C4157"
        android:gravity="center"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/copyright"
            android:id="@+id/copyright_tv"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffffff" />
    </RelativeLayout>

</LinearLayout>


    <!--
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    -->